tests/ui/typeck/unimplemented_constructor.sol
contract C {
    constructor(); //~ ERROR: expected one of
}
